- Prevent chrome from allowing textare resizing; - Set page sizes to 18; - Minor bugfixes; - Added pagination to search and categories; - Fixed minor layout issue.

--- a/Raffle/Content/Site.css
+++ b/Raffle/Content/Site.css
@@ -1,4 +1,8 @@
-﻿/* Sticky footer styles
+﻿textarea{
+    resize: none;
+}
+
+/* Sticky footer styles
       -------------------------------------------------- */
 
 html, body {
